WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21648
navigator.mimeTypes and navigator.plugins don't expose item and namedItem to JS
https://bugs.webkit.org/show_bug.cgi?id=21648
Summary
navigator.mimeTypes and navigator.plugins don't expose item and namedItem to JS
Ojan Vafai
Reported
2008-10-16 11:16:06 PDT
They do in Firefox. Seems like WebKit should as well.
Attachments
patch
(19.75 KB, patch)
2008-11-04 17:54 PST
,
Sam Weinig
hausmann
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2008-11-04 17:54:41 PST
Created
attachment 24902
[details]
patch
Simon Hausmann
Comment 2
2008-11-05 08:12:28 PST
Comment on
attachment 24902
[details]
patch Nice! :)
Sam Weinig
Comment 3
2008-11-05 10:35:57 PST
Fixed in
r38129
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug